--- a/app/src/main/res/drawable/res_back.xml
+++ b/app/src/main/res/drawable/res_back.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:centerColor="#FF0000"
-                android:endColor="@color/teal_200"
+            <gradient android:startColor="#4CAF50"
+                android:endColor="#FF9800"
                 android:angle="270"/>
         </shape>
     </item>
