--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,13 +17,14 @@
         android:layout_marginLeft="120dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Temperature Converter App"
         android:layout_below="@+id/splash_logo"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
+        android:fontFamily="@font/font"
         android:textAlignment="center"
-        android:textSize="35sp"
+        android:textSize="45sp"
         android:textStyle="bold"
         android:textColor="@color/black"/>
 
